# Rotacja3D

./: .gitignore  CMakeLists.txt  _Makefile
dox/: Makefile  doxygen_log.txt
dox/html/: __main_8cpp.html  __main_8cpp.js  __main_8cpp__incl.dot  __main_8cpp_a0ddf1224851353fc92bfbff6f499fa97_cgraph.dot  __main_8cpp_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _figure_8cpp.html  _figure_8cpp.js  _figure_8cpp__incl.dot  _figure_8cpp_source.html  _figure_8hpp.html  _figure_8hpp.js  _figure_8hpp__dep__incl.dot  _figure_8hpp__incl.dot  _figure_8hpp_source.html  _macierz3x3_8hpp.html  _macierz3x3_8hpp.js  _macierz3x3_8hpp__dep__incl.dot  _macierz3x3_8hpp__incl.dot  _macierz3x3_8hpp_source.html  _macierz_8cpp.html  _macierz_8cpp.js  _macierz_8cpp__incl.dot  _macierz_8cpp_source.html  _macierz_8hpp.html  _macierz_8hpp.js  _macierz_8hpp__dep__incl.dot  _macierz_8hpp__incl.dot  _macierz_8hpp_source.html  _macierz_8tpp.html  _macierz_8tpp__dep__incl.dot  _macierz_8tpp_source.html  _scene_8cpp.html  _scene_8cpp__incl.dot  _scene_8cpp_source.html  _scene_8hpp.html  _scene_8hpp__dep__incl.dot  (+113 more)
fml/: Macierz.cpp  Macierz.tpp  Wektor.cpp  Wektor.tpp
inc/: Figure.hpp  Macierz.hpp  Macierz3x3.hpp  Prostopadloscian.hpp  Scene.hpp  Wektor.hpp  Wektor3D.hpp  gnuplot.hpp
src/: Figure.cpp  Macierz.cpp  Macierz.tpp  Prostopadloscian.cpp  Scene.cpp  Wektor.tpp  Wektor3D.cpp  _main.cpp  empty.cpp  gnuplot.cpp  main.cpp
